// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeBoolean > fails when given a boolean 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeBoolean()[22m

Expected value to not be of type boolean, received:
  [31mtrue[39m"
`;

exports[`.not.toBeBoolean > fails when given an object of type boolean 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeBoolean()[22m

Expected value to not be of type boolean, received:
  [31mBoolean {}[39m"
`;

exports[`.toBeBoolean > fails when not given a boolean 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeBoolean()[22m

Expected value to be of type boolean, received:
  [31m1[39m"
`;
